# ormdb

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  specs.md  specs1.md  specs2.md  specs3.md  specs4.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
clients/python/: README.md  pyproject.toml
clients/python/ormdb/: __init__.py  client.py  exceptions.py  types.py
clients/python/ormdb/django/: __init__.py  base.py  client.py  creation.py  features.py  introspection.py  lookups.py  operations.py  schema.py
clients/python/ormdb/sqlalchemy/: __init__.py  dbapi.py  dialect.py
clients/typescript/: README.md  package.json  tsconfig.json  tsup.config.ts
crates/ormdb/: Cargo.toml
crates/ormdb-backup/: Cargo.toml
crates/ormdb-backup/src/: config.rs  error.rs  lib.rs  verify.rs
crates/ormdb-backup/src/incremental/: backup.rs  mod.rs
crates/ormdb-backup/src/restore/: mod.rs
crates/ormdb-backup/src/snapshot/: creator.rs  mod.rs
crates/ormdb-backup/src/storage/: mod.rs  s3.rs
crates/ormdb-bench/: Cargo.toml  README.md
crates/ormdb-bench/benches/: baseline.rs  cache.rs  e2e.rs  filter.rs  join.rs  mutation.rs  oltp.rs  query.rs  serialization.rs  storage.rs  vs_postgres.rs  vs_sqlite.rs
crates/ormdb-bench/src/: fixtures.rs  harness.rs  lib.rs  oltp.rs
crates/ormdb-bench/src/backends/: mod.rs  ormdb.rs  postgres.rs  sqlite.rs
crates/ormdb-cli/: Cargo.toml  README.md
crates/ormdb-cli/src/: backend.rs  commands.rs  completer.rs  executor.rs  formatter.rs  main.rs  mode.rs  repl.rs
crates/ormdb-client/: Cargo.toml  README.md
crates/ormdb-client/src/: client.rs  config.rs  connection.rs  error.rs  lib.rs  pool.rs
crates/ormdb-core/: Cargo.toml  README.md
crates/ormdb-core/src/: error.rs  lib.rs
crates/ormdb-core/src/catalog/: catalog.rs  constraint.rs  entity.rs  field.rs  mod.rs  relation.rs  schema.rs  types.rs
crates/ormdb-core/src/constraint/: check_evaluator.rs  mod.rs  unique_index.rs  validator.rs
crates/ormdb-core/src/metrics/: histogram.rs  mod.rs  registry.rs
crates/ormdb-core/src/migration/: backfill.rs  diff.rs  error.rs  executor.rs  grader.rs  mod.rs  plan.rs  state.rs
crates/ormdb-core/src/query/: aggregate.rs  cache.rs  cost.rs  executor.rs  explain.rs  filter.rs  join.rs  mod.rs  planner.rs  statistics.rs  value_codec.rs
crates/ormdb-core/src/replication/: applier.rs  changelog.rs  mod.rs
crates/ormdb-core/src/security/: audit.rs  budget.rs  capability.rs  context.rs  error.rs  field_security.rs  mod.rs  policy.rs  rls.rs
crates/ormdb-core/src/storage/: btree_index.rs  changelog.rs  columnar.rs  compaction.rs  config.rs  engine.rs  fulltext_index.rs  geo_index.rs  hash_index.rs  index_worker.rs  key.rs  mod.rs  record.rs  stemmer.rs  transaction.rs  vector_index.rs
crates/ormdb-core/tests/: query_integration.rs
crates/ormdb-gateway/: Cargo.toml  README.md
crates/ormdb-gateway/src/: config.rs  error.rs  json.rs  lib.rs  main.rs
crates/ormdb-gateway/src/routes/: health.rs  mod.rs  mutation.rs  query.rs  replication.rs  schema.rs
crates/ormdb-lang/: Cargo.toml  README.md
crates/ormdb-lang/src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/ormdb-proto/: Cargo.toml  README.md
crates/ormdb-proto/src/: error.rs  explain.rs  framing.rs  handshake.rs  lib.rs  message.rs  metrics.rs  mutation.rs  query.rs  replication.rs  result.rs  value.rs
crates/ormdb-raft/: Cargo.toml
crates/ormdb-raft/src/: config.rs  error.rs  lib.rs  types.rs
crates/ormdb-raft/src/cluster/: manager.rs  membership.rs  mod.rs  router.rs
crates/ormdb-raft/src/network/: factory.rs  messages.rs  mod.rs  server.rs  transport.rs
crates/ormdb-raft/src/storage/: log_storage.rs  mod.rs  snapshot.rs  state_machine.rs
crates/ormdb-server/: Cargo.toml  README.md
crates/ormdb-server/src/: cascade.rs  config.rs  database.rs  error.rs  handler.rs  lib.rs  main.rs  mutation.rs  transport.rs
crates/ormdb-server/src/auth/: apikey_authenticator.rs  jwt_authenticator.rs  mod.rs  token_authenticator.rs
crates/ormdb-server/src/cdc/: mod.rs
crates/ormdb-server/src/pubsub/: manager.rs  mod.rs  subscription.rs
crates/ormdb-server/src/replication/: manager.rs  mod.rs
crates/ormdb-studio/: Cargo.toml  README.md
crates/ormdb-studio/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/ormdb-studio/frontend/src/: App.vue  style.css
crates/ormdb-studio/frontend/src/api/: client.ts
crates/ormdb-studio/frontend/src/components/: ClusterStatusPanel.vue  ConnectionSettings.vue  MetricCard.vue  MetricsDashboard.vue  QueryEditor.vue  ResultsTable.vue  SchemaExplorer.vue  Terminal.vue
crates/ormdb-studio/frontend/src/components/charts/: CacheHitRateChart.vue  EntityCountsChart.vue  LatencyChart.vue  RequestsPerSecondChart.vue
crates/ormdb-studio/frontend/src/stores/: metrics.ts  schema.ts  session.ts  settings.ts
crates/ormdb-studio/src/: config.rs  demo.rs  error.rs  lib.rs  main.rs  state.rs
crates/ormdb-studio/src/routes/: api.rs  health.rs  static_files.rs
crates/ormdb-studio/src/session/: database.rs  manager.rs  mod.rs
crates/ormdb-studio/src/ws/: mod.rs  terminal.rs
crates/ormdb/src/: database.rs  entity.rs  error.rs  lib.rs  mutation.rs  query.rs  schema.rs  transaction.rs
demo/: Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  benchmarks.md  compatibility.md  migrations.md  modeling.md  querying.md  roadmap.md  security.md  technology.md
documentation/: mkdocs.yml
documentation/demos/: Cargo.toml  README.md
documentation/demos/src/: main.rs
documentation/docs/: changelog.md  index.md
jepsen.ormdb/: .gitignore  Dockerfile.control  Dockerfile.node  README.md  docker-compose.yml  project.clj
jepsen.ormdb/scripts/: quick-start.sh  run-all-tests.sh
scripts/: install.sh  publish.sh  release.sh  run-benchmarks.sh  run-comparison.sh
(+80 files in other folders)
