[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
repository = "https://github.com/Skelf-Research/ormdb"
homepage = "https://docs.skelfresearch.com/ormdb"
documentation = "https://docs.skelfresearch.com/ormdb"

[workspace.dependencies]
# Core
sled = { version = "0.34", features = ["compression"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
mimalloc = { version = "0.1", default-features = false }
async-nng = "0.2"
nng = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
thiserror = "2"
tracing = "0.1"
dashmap = "6"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"

# Comparison backends
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Internal
ormdb-core = { path = "crates/ormdb-core" }
ormdb-proto = { path = "crates/ormdb-proto" }
ormdb-client = { path = "crates/ormdb-client" }
ormdb-lang = { path = "crates/ormdb-lang" }
