[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
repository = "https://github.com/Skelf-Research/ormdb"
homepage = "https://docs.skelfresearch.com/ormdb"
documentation = "https://docs.skelfresearch.com/ormdb"

[workspace.dependencies]
# Core
sled = { version = "0.34", features = ["compression"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
mimalloc = { version = "0.1", default-features = false }
async-nng = "0.2"
nng = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
thiserror = "2"
tracing = "0.1"
dashmap = "6"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.11.1"  # Security: fix integer overflow in BytesMut::reserve
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Time (override transitive to fix RUSTSEC-2026-0009)
time = "0.3.47"

# Security/Auth
jsonwebtoken = "9"
blake3 = "1.5"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"

# Comparison backends
rusqlite = { version = "0.32", features = ["bundled"] }  # Updated to resolve libsqlite3-sys conflict
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres"] }  # Security: fix binary protocol cast issue

# Internal crates (path for local dev, version for publishing)
ormdb-core = { version = "0.1.0", path = "crates/ormdb-core" }
ormdb-proto = { version = "0.1.0", path = "crates/ormdb-proto" }
ormdb-client = { version = "0.1.0", path = "crates/ormdb-client" }
ormdb-lang = { version = "0.1.0", path = "crates/ormdb-lang" }
