[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ormdb"
version = "0.1.0"
description = "Python client for ORMDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Dipankar Sarkar", email = "me@dipankar.name" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=2.0",
]
django = [
    "django>=4.2",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
]

[project.urls]
Homepage = "https://docs.skelfresearch.com/ormdb"
Documentation = "https://docs.skelfresearch.com/ormdb"
Repository = "https://github.com/Skelf-Research/ormdb"

[project.entry-points."sqlalchemy.dialects"]
ormdb = "ormdb.sqlalchemy:OrmdbDialect"

[tool.hatch.build.targets.wheel]
packages = ["ormdb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
