[package]
name = "ormdb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command-line interface for ORMDB"
readme = "README.md"
keywords = ["database", "orm", "cli", "repl"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "ormdb"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

ormdb-client.workspace = true
ormdb-lang.workspace = true
ormdb-proto.workspace = true

rustyline = "15"
comfy-table = "7"
dirs = "5"
