[package]
name = "ormdb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ORMDB Command-Line Client"

[[bin]]
name = "ormdb-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

ormdb-client.workspace = true
ormdb-lang.workspace = true
ormdb-proto.workspace = true

rustyline = "15"
comfy-table = "7"
dirs = "5"
