[package]
name = "ormdb-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Async Rust client library for ORMDB"
readme = "README.md"
keywords = ["database", "orm", "client", "async"]
categories = ["database", "asynchronous"]

[dependencies]
ormdb-proto.workspace = true
async-nng.workspace = true
nng.workspace = true
rkyv.workspace = true
tokio.workspace = true
thiserror.workspace = true
