[package]
name = "ormdb-core"
version.workspace = true
edition.workspace = true

[dependencies]
sled.workspace = true
rkyv.workspace = true
mimalloc = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
ormdb-proto.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bf-tree = "0.4"
dashmap.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
