[package]
name = "ormdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core storage engine, query executor, and catalog for ORMDB"
readme = "README.md"
keywords = ["database", "orm", "storage", "query-engine"]
categories = ["database", "data-structures"]

[dependencies]
sled.workspace = true
rkyv.workspace = true
mimalloc = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
ormdb-proto.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bf-tree = "0.4"
dashmap.workspace = true
parking_lot.workspace = true
blake3 = "1.5"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
