[package]
name = "ormdb-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ormdb-gateway"
path = "src/main.rs"

[dependencies]
# HTTP framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Internal crates
ormdb-client = { path = "../ormdb-client" }
ormdb-proto = { path = "../ormdb-proto" }

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow = "1.0"

[dev-dependencies]
axum-test = "16"
