[package]
name = "ormdb-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP/REST gateway for ORMDB"
readme = "README.md"
keywords = ["database", "orm", "http", "rest", "gateway"]
categories = ["web-programming::http-server", "database"]

[[bin]]
name = "ormdb-gateway"
path = "src/main.rs"

[dependencies]
# HTTP framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Internal crates
ormdb-client = { version = "0.1.0", path = "../ormdb-client" }
ormdb-proto = { version = "0.1.0", path = "../ormdb-proto" }

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow = "1.0"

[dev-dependencies]
axum-test = "16"
