[package]
name = "ormdb-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ORM-style query language parser and compiler for ORMDB"

[dependencies]
logos = "0.14"
thiserror.workspace = true
ormdb-proto = { path = "../ormdb-proto" }

[dev-dependencies]
pretty_assertions = "1.4"
