[package]
name = "ormdb-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Wire protocol definitions for ORMDB with zero-copy serialization"
readme = "README.md"
keywords = ["database", "protocol", "serialization", "rkyv"]
categories = ["database", "encoding"]

[dependencies]
rkyv.workspace = true
bytes.workspace = true
thiserror.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
