[package]
name = "ormdb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Standalone ORMDB database server"
readme = "README.md"
keywords = ["database", "orm", "server"]
categories = ["database"]

[[bin]]
name = "ormdb-server"
path = "src/main.rs"

[dependencies]
ormdb-core.workspace = true
ormdb-proto.workspace = true
ormdb-raft = { path = "../ormdb-raft", optional = true }
async-nng.workspace = true
nng.workspace = true
rkyv.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
sled.workspace = true

[features]
default = []
raft = ["ormdb-raft"]

[dev-dependencies]
tempfile = "3"
